src/scss/component-specific.scss
@import './variables';
@import '../../node_modules/pearson-elements/scss/elements.scss';

.pe-template__static-small {
  position: fixed;
  top: 50px;
  left: 35px;
  background-color: $pe-color-white;
  padding: $alert-padding;
  animation-name: openAlert;
  animation-duration: .3s;
}
#Error {
  border-top: $alert-border-top $pe-color-strawberry-red;
}
#Success {
  border-top: $alert-border-top $pe-color-digital-grass-green;
}
svg {
  height: 0;
  width: 0;
}
@keyframes openAlert {
  0% { top: -75px; }
  100% { top: 50px; }
}
.Error-title {
  color: $pe-color-strawberry-red;
}
.Success-title {
  color: $pe-color-digital-grass-green;
}
.close-title {
  float: right;
  border: none;
  background: transparent;
}
.close-title-animation {
  animation-name: closeAlert;
  animation-duration: .2s;
}
@keyframes closeAlert {
  0% {}
  100% { left: -550px; }
}

